--- a/EXPRESS JS/views/404.html
+++ b/EXPRESS JS/views/404.html
@@ -5,8 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page not Found</title>
+    <style>
+        body{
+            padding: 0;
+            margin: 0;
+            font-family: sans-serif;
+        }
+        main{
+            padding: 1rem;
+        }
+        .main-header{
+            width: 100%;
+            height: 3.5rem;
+            background-color: rgb(233, 83, 83);
+            padding: 0 1.5rem;
+        }
+        .main-header__nav{
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
+        .main-header__item-list{
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+        .main-header__item{
+            margin:0 1rem;
+            padding: 0;
+        }
+        .main-header__item-list a{
+            text-decoration: none;
+            color: white;
+        }
+        .main-header__item-list a:hover,
+        .main-header__item-list a:active,
+        .main-header__item-list a.active{
+            color: rgb(206, 241, 47);
+        }
+    </style>
 </head>
 <body>
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item">
+                    <a class="active" href="/">Shop</a>
+                </li>
+                <li class="main-header__item">
+                    <a href="/admin/add-food">Add Product</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <h1>Page not found</h1>
     </main>
