--- a/EXPRESS JS/views/add-food.html
+++ b/EXPRESS JS/views/add-food.html
@@ -1,27 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
+    <style>
+        body {
+            padding: 0;
+            margin: 0;
+            font-family: sans-serif;
+        }
+
+        main {
+            padding: 1rem;
+        }
+
+        .main-header {
+            width: 100%;
+            height: 3.5rem;
+            background-color: rgb(233, 83, 83);
+            padding: 0 1.5rem;
+        }
+
+        .main-header__nav {
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
+
+        .main-header__item-list {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        .main-header__item {
+            margin: 0 1rem;
+            padding: 0;
+        }
+
+        .main-header__item-list a {
+            text-decoration: none;
+            color: black;
+        }
+
+        .main-header__item-list a:hover,
+        .main-header__item-list a:active,
+        .main-header__item-list a.active {
+            color: rgb(206, 241, 47);
+        }
+
+        .form-food{
+            width: 20rem;
+            max-width: 90%;
+            margin: auto;
+
+        }
+
+        .form-control{
+            margin: 1rem 0;
+        }
+
+        .form-control label,
+        .form-control input{
+            display: block;
+            width: 100%;
+        }
+
+        .form-control input{
+            border: 1px solid  rgb(233, 83, 83);
+            font:inherit;
+            border-radius: 2px;
+        }
+
+        button{
+            font: inherit;
+            border: 1px solid #2202b3;
+            color: #2202b3;
+            background-color:white;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+
+        button:hover,
+        button:active{
+            color:white;
+            background-color:  #2202b3;
+        }
+    </style>
 </head>
+
 <body>
-    <header>
-        <ul>
-            <li>
-                <a href="/">Shop</a>
-            </li>
-            <li>
-                <a href="/add-food">Add Product</a>
-            </li>
-        </ul>
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item">
+                    <a href="/">Shop</a>
+                </li>
+                <li class="main-header__item">
+                    <a class="active" href="/admin/add-food">Add Product</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <form action="add-food" method="POST">
-            <input type="text" name="title">
-            <button type="submit">Add Product</button>    
+        <form class="form-food"action="add-food" method="POST">
+            <div class="form-control">
+                <label for="title">Food Name</label>
+                <input type="text" name="title" id="title">
+            </div>
+            <button type="submit">Add Product</button>
         </form>
     </main>
 </body>
+
 </html>
