--- a/EXPRESS JS/views/shop.html
+++ b/EXPRESS JS/views/shop.html
@@ -5,46 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHOP</title>
-    <style>
-        body{
-            padding: 0;
-            margin: 0;
-            font-family: sans-serif;
-        }
-        main{
-            padding: 1rem;
-        }
-        .main-header{
-            width: 100%;
-            height: 3.5rem;
-            background-color: rgb(233, 83, 83);
-            padding: 0 1.5rem;
-        }
-        .main-header__nav{
-            height: 100%;
-            display: flex;
-            align-items: center;
-        }
-        .main-header__item-list{
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-        .main-header__item{
-            margin:0 1rem;
-            padding: 0;
-        }
-        .main-header__item-list a{
-            text-decoration: none;
-            color: white;
-        }
-        .main-header__item-list a:hover,
-        .main-header__item-list a:active,
-        .main-header__item-list a.active{
-            color: rgb(206, 241, 47);
-        }
-    </style>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
     <header class="main-header">
