--- a/EXPRESS JS/views/add-food.html
+++ b/EXPRESS JS/views/add-food.html
@@ -8,6 +8,7 @@
     <title>Add Product</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/food.css">
+    <!-- <script src="/js/check.js"></script> -->
 </head>
 
 <body>
