--- a/EXPRESS JS/views/shop.pug
+++ b/EXPRESS JS/views/shop.pug
@@ -15,7 +15,7 @@ block content
                             //- - var imag = ${foods.data};
                             img(src=foods.data,alt="A Book")
                         .card__content
-                            h2.product__price #{foods.price}
+                            h2.product__price ₹#{foods.price}
                             p.product__description #{foods.desc}
                         .card__actions
                             button.btn Add to Cart  
