--- a/EJS-E Commerce/views/shop/index.ejs
+++ b/EJS-E Commerce/views/shop/index.ejs
@@ -1,8 +1,8 @@
-<%-include('includes/head.ejs')%>
+<%-include('../includes/head.ejs')%>
     <link rel="stylesheet" href="/css/food.css">
 </head>
 <body>
-    <%-include('includes/navigation.ejs')%>
+    <%-include('../includes/navigation.ejs')%>
     <main>
         <% if(food.length >0){ %>
             <div class="grid">
@@ -12,7 +12,7 @@
                             <h1 class="product__title"><%=foods.title%></h1>
                         </header>
                         <div class="card__image">
-                            <img src="<%foods.image%>" alt="A Food"> 
+                            <img src="<%=foods.data%>" alt="A Food"> 
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">₹<%=foods.price%></h2>
@@ -28,4 +28,4 @@
             <h1> No Foods Found</h1>
         <%}%>
     </main>
-<%-include('includes/end.ejs')%>
+<%-include('../includes/end.ejs')%>
