--- a/EJS-E Commerce/views/admin/foods.ejs
+++ b/EJS-E Commerce/views/admin/foods.ejs
@@ -19,8 +19,10 @@
                             <p class="product__description"><%=foods.desc%></p>
                         </div>
                         <div class="card__actions">
-                            <button class="btn">Edit</button>
-                            <button class="btn__del">Delete</button>
+                            <a href="/admin/edit-product" class="btn">Edit</a>
+                            <form action="/admin/delete-product" method="POST">
+                                <button class="btn" type="submit">Delete</button>
+                            </form>
                         </div>
                     </article>
                 <%}%>
