--- a/EJS-E Commerce/views/shop/product-details.ejs
+++ b/EJS-E Commerce/views/shop/product-details.ejs
@@ -3,29 +3,16 @@
 </head>
 <body>
     <%-include('../includes/navigation.ejs')%>
-    <main>
-        <% if(food.length >0){ %>
-            <div class="grid">
-                <%for(let foods of food){%>
-                    <article class="card product-item">
-                        <header class="card__header">
-                            <h1 class="product__title"><%=foods.title%></h1>
-                        </header>
-                        <div class="card__image">
-                            <img src="<%=foods.data%>" alt="A Food"> 
-                        </div>
-                        <div class="card__content">
-                            <h2 class="product__price">₹<%=foods.price%></h2>
-                            <p class="product__description"><%=foods.desc%></p>
-                        </div>
-                        <div class="card__actions">
-                            <button class="btn">Add to Cart</button>
-                        </div>
-                    </article>
-                <%}%>
-            </div>
-        <%} else{%>
-            <h1> No Foods Found</h1>
-        <%}%>
+    <main class="centered">
+        <h1><%=food.title%></h1>
+        <hr>
+        <div>
+            <img src="<%=food.data%>" alt="<%=food.title%>">
+        </div>
+        <h2><%=food.price %> </h2>
+        <p><%=food.desc %> </p>
+        <form action='/cart' method="POST">
+            <button class="btn" type="submit">Add to Cart</button>
+        </form>
     </main>
 <%-include('../includes/end.ejs')%>
