--- a/EJS-E Commerce/views/shop/product-list.ejs
+++ b/EJS-E Commerce/views/shop/product-list.ejs
@@ -19,7 +19,10 @@
                             <p class="product__description"><%=foods.desc%></p>
                         </div>
                         <div class="card__actions">
-                            <button class="btn">Add to Cart</button>
+                            <a href="/products/<%=foods.id%>" class="btn">Details</a>
+                            <form action="/add-to-cart" method="POST">
+                                <button class="btn">Add to Cart</button>
+                            </form>
                         </div>
                     </article>
                 <%}%>
