--- a/EJS-E Commerce/views/shop/product-details.ejs
+++ b/EJS-E Commerce/views/shop/product-details.ejs
@@ -11,8 +11,9 @@
         </div>
         <h2><%=food.price %> </h2>
         <p><%=food.desc %> </p>
-        <form action='/cart' method="POST">
+        <form action="/cart" method="POST">
             <button class="btn" type="submit">Add to Cart</button>
+            <input type="hidden" name="productId" value="<%=food.id%>">
         </form>
     </main>
 <%-include('../includes/end.ejs')%>
