--- a/EJS-E Commerce/views/includes/add-to-cart.ejs
+++ b/EJS-E Commerce/views/includes/add-to-cart.ejs
@@ -1,5 +1,4 @@
-<%var foods = food%>
 <form action='/cart' method="POST">
     <button class="btn" type="submit">Add to Cart</button>
-    <input type="hidden" name="productId" value="<%=food.id%>">
+    <input type="hidden" name="productId" value="<%=foods.id%>">
 </form>
