--- a/EJS-E Commerce/views/shop/product-list.ejs
+++ b/EJS-E Commerce/views/shop/product-list.ejs
@@ -20,8 +20,9 @@
                         </div>
                         <div class="card__actions">
                             <a href="/products/<%=foods.id%>" class="btn">Details</a>
-                            <form action="/add-to-cart" method="POST">
-                                <button class="btn">Add to Cart</button>
+                            <form action='/cart' method="POST">
+                                <button class="btn" type="submit">Add to Cart</button>
+                                <input type="hidden" name="productId" value="<%=foods.id%>">
                             </form>
                         </div>
                     </article>
