--- a/EJS-E Commerce/views/admin/foods.ejs
+++ b/EJS-E Commerce/views/admin/foods.ejs
@@ -19,7 +19,7 @@
                             <p class="product__description"><%=foods.desc%></p>
                         </div>
                         <div class="card__actions">
-                            <a href="/admin/edit-food" class="btn">Edit</a>
+                            <a href="/admin/edit-food/<%=foods.id%>?edit=true" class="btn">Edit</a>
                             <form action="/admin/delete-product" method="POST">
                                 <button class="btn" type="submit">Delete</button>
                             </form>
