--- a/EJS-E Commerce/views/admin/edit-food.ejs
+++ b/EJS-E Commerce/views/admin/edit-food.ejs
@@ -15,6 +15,9 @@
                     <input type="number" name="price" id="price" step="10" value="<%if(editing) {%><%=food.price%><%}%>">
                     <label for="title">Description</label>
                     <textarea type="text" name="desc" id="desc"><%if(editing) {%><%=food.desc%><%}%></textarea>
+                    <% if(editing){%>
+                        <input type="hidden" value="<%=food.id%>" name="productId">
+                    <%}%> 
                 </div>
                 <button class="btn" type="submit"><%if(editing) {%> Update Product <%}else{%> Add Product <%}%></button>
             </form>
