--- a/EJS-E Commerce/views/shop/cart.ejs
+++ b/EJS-E Commerce/views/shop/cart.ejs
@@ -4,6 +4,16 @@
 <body>
     <%-include('../includes/navigation.ejs')%>
     <main>
-        <h1>Cart</h1>
+        <% if(foods.length > 0) {%>
+            <ul>
+                <% foods.forEach(p =>{%>
+                    <li>
+                        <%=p.productData.title%> (<%=p.qty%>)
+                    </li>
+                <%})%>
+            </ul>
+        <%}else{%>
+            <h1> No product</h1>
+         <%}%>   
     </main>
 <%-include('../includes/end.ejs')%>
