insert sql : desc changed as descr

--- a/EJS-E Commerce SQL AS STORAGE/views/shop/index.ejs
+++ b/EJS-E Commerce SQL AS STORAGE/views/shop/index.ejs
@@ -16,7 +16,7 @@
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">₹<%=foods.price%></h2>
-                            <p class="product__description"><%=foods.desc%></p>
+                            <p class="product__description"><%=foods.descr%></p>
                         </div>
                         <div class="card__actions">
                             <form action='/cart' method="POST">
