--- a/EJS-E Commerce SQL AS STORAGE/views/shop/product-details.ejs
+++ b/EJS-E Commerce SQL AS STORAGE/views/shop/product-details.ejs
@@ -10,7 +10,7 @@
             <img src="<%=foods.data%>" alt="<%=foods.title%>">
         </div>
         <h2><%=foods.price %> </h2>
-        <p><%=foods.desc %> </p>
+        <p><%=foods.descr %> </p>
         <%-include('../includes/add-to-cart.ejs')%>
     </main>
 <%-include('../includes/end.ejs')%>
