--- a/EJS-E Commerce SQL AS STORAGE/views/shop/product-list.ejs
+++ b/EJS-E Commerce SQL AS STORAGE/views/shop/product-list.ejs
@@ -16,7 +16,7 @@
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">₹<%=foods.price%></h2>
-                            <p class="product__description"><%=foods.desc%></p>
+                            <p class="product__description"><%=foods.descr%></p>
                         </div>
                         <div class="card__actions">
                             <a href="/products/<%=foods.id%>" class="btn">Details</a>
